--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -56,12 +56,20 @@
     </style>
 
     <style name="fieldLabel">
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">#303030</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">40</item>
+    </style>
+
+    <style name="fieldSeparator">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">2dp</item>
+        <item name="android:layout_marginLeft">1dp</item>
+        <item name="android:layout_marginRight">1dp</item>
+        <item name="android:background">@drawable/field_separator</item>
     </style>
 
 </resources>
