--- a/oishii/OiSHii/res/layout/login.xml
+++ b/oishii/OiSHii/res/layout/login.xml
@@ -1,72 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:src="@drawable/logo_top" />
-
+    android:layout_height="fill_parent" >
 
     <LinearLayout
-        android:id="@+id/userPasswdLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:layout_marginTop="15dip"
-        android:background="@drawable/textbox_bkgd"
-        android:gravity="center_vertical"
         android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/username_edit"
+        <ImageView
             android:layout_width="fill_parent"
-            android:layout_height="45dip"
-            android:background="@android:color/white"
-            android:hint="@string/username"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="10dp"
-            android:singleLine="true"
-            android:tag="Username"
-            android:textColor="@color/text_color"
-            android:textColorHint="@color/text_field_hint"
-            android:textSize="17dip"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:src="@drawable/logo_top" />
 
-        <View
-            android:id="@+id/dividerLine"
+        <LinearLayout
+            android:id="@+id/userPasswdLayout"
             android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="#999999" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dip"
+            android:layout_marginTop="15dip"
+            android:background="@drawable/textbox_bkgd"
+            android:gravity="center_vertical"
+            android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/password_edit"
+            <EditText
+                android:id="@+id/username_edit"
+                android:layout_width="fill_parent"
+                android:layout_height="45dip"
+                android:background="@android:color/white"
+                android:hint="@string/username"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="10dp"
+                android:singleLine="true"
+                android:tag="Username"
+                android:textColor="@color/text_color"
+                android:textColorHint="@color/text_field_hint"
+                android:textSize="17dip"
+                android:textStyle="bold" />
+
+            <View
+                android:id="@+id/dividerLine"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#999999" />
+
+            <EditText
+                android:id="@+id/password_edit"
+                android:layout_width="fill_parent"
+                android:layout_height="45dip"
+                android:background="@android:color/white"
+                android:hint="@string/password"
+                android:imeOptions="actionGo"
+                android:inputType="textPassword"
+                android:paddingLeft="10dp"
+                android:singleLine="true"
+                android:tag="Password"
+                android:textColor="@color/text_color"
+                android:textColorHint="@color/text_field_hint"
+                android:textSize="17dip"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/login"
+            style="@style/primary_btn"
             android:layout_width="fill_parent"
-            android:layout_height="45dip"
-            android:background="@android:color/white"
-            android:hint="@string/password"
-            android:imeOptions="actionGo"
-            android:inputType="textPassword"
-            android:paddingLeft="10dp"
-            android:singleLine="true"
-            android:tag="Password"
-            android:textColor="@color/text_color"
-            android:textColorHint="@color/text_field_hint"
-            android:textSize="17dip"
-            android:textStyle="bold" />
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dip"
+            android:layout_marginTop="15dp"
+            android:text="@string/btn_login" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/login"
-        style="@style/primary_btn"
-        android:layout_width="fill_parent"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:layout_marginTop="15dp"
-        android:text="@string/btn_login" />
-
-</LinearLayout>
+</ScrollView>
