--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -40,6 +40,14 @@
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">0.6</item>
     </style>
+    
+    <!-- Sahdow for fields views like create account -->
+      <style name="fieldShadow">
+        <item name="android:shadowColor">#000000</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">0.8</item>
+    </style>
 
     <style name="titleShadow">
         <item name="android:shadowColor">#C0C0C0</item>
