--- a/oishii/OiSHii/res/layout/create_account.xml
+++ b/oishii/OiSHii/res/layout/create_account.xml
@@ -7,6 +7,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
+        android:layout_gravity="center"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp" >
 
@@ -15,7 +16,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/stroke_border"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            style="@style/fieldShadow" >
 
             <LinearLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
