--- a/oishii/OiSHii/res/layout/create_account.xml
+++ b/oishii/OiSHii/res/layout/create_account.xml
@@ -9,7 +9,8 @@
         android:layout_marginLeft="8dp"
         android:layout_gravity="center"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp" >
+        android:layout_marginTop="8dp"
+        style="@style/fieldShadow" >
 
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
