--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -26,7 +26,7 @@
     <style name="sploffers_text" parent="@style/todaysmenu_text">
         <item name="android:textSize">16dp</item>
     </style>
-    
+
     <style name="textShadow">
         <item name="android:shadowColor">#19736A</item>
         <item name="android:shadowDx">0</item>
@@ -40,9 +40,9 @@
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">0.6</item>
     </style>
-    
+
     <!-- Sahdow for fields views like create account -->
-      <style name="fieldShadow">
+    <style name="fieldShadow">
         <item name="android:shadowColor">#000000</item>
         <item name="android:shadowDx">0</item>
         <item name="android:shadowDy">1</item>
@@ -82,6 +82,28 @@
         <item name="android:layout_marginLeft">1dp</item>
         <item name="android:layout_marginRight">1dp</item>
         <item name="android:background">@drawable/field_separator</item>
+    </style>
+
+    <style name="accountdetailsText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:textColor">@color/text_color</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="accountdetailsImage">
+        <item name="android:layout_width">10dp</item>
+        <item name="android:layout_height">15dp</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_marginRight">12dp</item>
+        <item name="android:src">@drawable/arrow_green</item>
     </style>
 
 </resources>
