--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -56,6 +56,7 @@
         <item name="android:shadowRadius">0.6</item>
     </style>
 
+    <!-- field related styles -->
     <style name="fieldText">
         <item name="android:textColor">@color/text_color</item>
         <item name="android:background">@null</item>
@@ -84,6 +85,15 @@
         <item name="android:background">@drawable/field_separator</item>
     </style>
 
+    <style name="fieldButton" parent="@style/primary_btn">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_marginRight">15dp</item>
+        <item name="android:layout_marginTop">15dp</item>
+    </style>
+
+    <!-- Acc details related styles -->
     <style name="accountdetailsText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
