--- a/oishii/OiSHii/res/layout/changepassword.xml
+++ b/oishii/OiSHii/res/layout/changepassword.xml
@@ -33,10 +33,10 @@
 
                     <TextView
                         style="@style/fieldLabel"
-                        android:text="@string/field_title" />
+                        android:text="@string/current" />
 
                     <EditText
-                        android:id="@+id/field_Title"
+                        android:id="@+id/pwdCurrent"
                         style="@style/fieldText" >
 
                         <requestFocus />
@@ -52,10 +52,10 @@
 
                     <TextView
                         style="@style/fieldLabel"
-                        android:text="@string/field_first_name" />
+                        android:text="@string/new_text" />
 
                     <EditText
-                        android:id="@+id/fld_FirstName"
+                        android:id="@+id/pwdNew"
                         style="@style/fieldText" />
                 </LinearLayout>
             </LinearLayout>
@@ -65,6 +65,6 @@
     <Button
         android:id="@+id/btnCreateAcc"
         style="@style/fieldButton"
-        android:text="@string/createacc" />
+        android:text="@string/chngpwd" />
 
 </LinearLayout>
