--- a/oishii/OiSHii/res/layout/todaysmenu_details.xml
+++ b/oishii/OiSHii/res/layout/todaysmenu_details.xml
@@ -12,11 +12,12 @@
 
         <!--
             android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
+            android:layout_centerInParent="true"
         -->
 
         <TextView
             android:id="@+id/title"
+            style="@style/todaysmenu_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
