--- a/oishii/OiSHii/res/layout/create_account.xml
+++ b/oishii/OiSHii/res/layout/create_account.xml
@@ -132,6 +132,6 @@
     <Button
         android:id="@+id/btnCreateAcc"
         style="@style/fieldButton"
-        android:text="@string/chngpwd" />
+        android:text="@string/createacc" />
 
 </LinearLayout>
