--- a/oishii/OiSHii/res/layout/menu_item_header.xml
+++ b/oishii/OiSHii/res/layout/menu_item_header.xml
@@ -1,18 +1,40 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="3dp" > -->
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/header"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_marginBottom="3dp"
+        android:background="@drawable/selector"
+        android:orientation="vertical"
+        android:paddingBottom="3dp" >
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/mnuTitle"
+            style="@style/sploffers_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="5dp" />
+
+        <TextView
+            android:id="@+id/mnuDesc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@android:color/black" />
+    </LinearLayout>
+    <!--
+    <LinearLayout
+        android:id="@+id/menuParent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:orientation="vertical" />
+    -->
 
-</LinearLayout>
+<!-- </LinearLayout> -->
