--- a/oishii/OiSHii/res/layout/specialoffers.xml
+++ b/oishii/OiSHii/res/layout/specialoffers.xml
@@ -36,6 +36,6 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="8dp"
-        android:src="@drawable/arrow" />
+        android:src="@drawable/new_arrow" />
 
 </RelativeLayout>
