--- a/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
+++ b/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
@@ -37,7 +37,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="8dp"
             android:scaleType="fitXY"
-            android:src="@drawable/arrow" />
+            android:src="@drawable/new_arrow" />
 
         <ProgressBar
             android:id="@+id/imageProgress"
