--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="headertext" >
+    <style name="headertext">
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/text_color</item>
         <item name="android:textSize">21dip</item>
@@ -114,6 +114,15 @@
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_marginRight">12dp</item>
         <item name="android:src">@drawable/arrow_green</item>
+    </style>
+
+    <style name="mainmenutext">
+        <item name="android:textColor">#999999</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
     </style>
 
 </resources>
