--- a/oishii/OiSHii/res/layout/login.xml
+++ b/oishii/OiSHii/res/layout/login.xml
@@ -70,7 +70,7 @@
             android:layout_marginLeft="10dip"
             android:layout_marginRight="10dip"
             android:layout_marginTop="15dp"
-            android:text="@string/btn_login" />
+            android:text="@string/signin" />
     </LinearLayout>
 
 </ScrollView>
