--- a/oishii/OiSHii/res/layout/oishiilistbase.xml
+++ b/oishii/OiSHii/res/layout/oishiilistbase.xml
@@ -45,7 +45,7 @@
     <ListView
         android:id="@+id/listView1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:divider="@android:color/transparent"
         android:dividerHeight="3dp"
         android:drawSelectorOnTop="true"
@@ -54,7 +54,7 @@
         android:scrollbarAlwaysDrawVerticalTrack="false"
         android:scrollingCache="false" />
 
-    <ScrollView
+  <!--   <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp" >
@@ -65,6 +65,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:visibility="gone" />
-    </ScrollView>
+    </ScrollView> -->
+
+    <ExpandableListView
+        android:id="@+id/expList"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+      />
 
 </LinearLayout>
