--- a/oishii/OiSHii/res/layout/menu_item_header.xml
+++ b/oishii/OiSHii/res/layout/menu_item_header.xml
@@ -4,21 +4,22 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="3dp"
     android:orientation="vertical"
-    android:paddingBottom="3dp" >
+    android:paddingBottom="3dp" 
+    >
 
     <TextView
         android:id="@+id/mnuTitle"
         style="@style/sploffers_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="5dp" />
 
     <TextView
         android:id="@+id/mnuDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="5dp"
         android:textColor="@android:color/black" />
 
