--- a/oishii/OiSHii/res/layout/footer.xml
+++ b/oishii/OiSHii/res/layout/footer.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:layout_centerVertical="true"
-        android:background="@drawable/menu_bg"
+        android:background="@color/menu_bg"
         android:orientation="horizontal" >
 
         <LinearLayout
@@ -83,7 +83,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/menu_home" />
+                android:src="@drawable/basket" />
 
             <TextView
                 style="@style/mainmenutext"
@@ -115,7 +115,7 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/menu_home" />
+                        android:src="@drawable/basket" />
 
                     <TextView
                         style="@style/mainmenutext"
