--- a/oishii/OiSHii/res/values/colors.xml
+++ b/oishii/OiSHii/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="screen_bg_color">#CCCCCC</color>
     <color name="text_field_hint">#A6A8AB</color>
     <color name="gray">#E5E5E5</color>
+    <color name="menu_bg">#170E12</color>
 </resources>
