--- a/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
+++ b/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
@@ -14,6 +14,7 @@
             android:layout_width="100dp"
             android:layout_height="65dp"
             android:layout_alignParentLeft="true"
+            android:layout_marginLeft="3dp"
             android:layout_alignParentTop="true"
             android:scaleType="fitXY" />
 
