--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -117,7 +117,7 @@
     </style>
 
     <style name="mainmenutext">
-        <item name="android:textColor">#999999</item>
+        <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">12sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
